<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"

        >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TASK DETAILS"
            style="?android:listSeparatorTextViewStyle"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title_label"
            android:layout_marginTop="20dp"
            style="?android:listViewStyle"
            />

    <EditText
            android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/task_title_hint"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/task_details_label"
            android:layout_marginTop="10dp"
            style="?android:listViewStyle"/>

    <EditText
            android:id="@+id/crime_details"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/task_details_hint"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_date_label"
            style="?android:listChoiceIndicatorSingle"
            />

    <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"

            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_complete_label"
            style="?android:listViewStyle"
            />

    <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />
</LinearLayout>



